fab_bundle/templates/iptables.rules
*filter

# Flush
-F

# Policies
-P INPUT DROP
-P FORWARD DROP

# Allow all loopback (lo0) traffic
-A INPUT -i lo -j ACCEPT

# Accept all established inbound connections
-A INPUT -m state --state ESTABLISHED,RELATED -j ACCEPT

# Drop all traffic to 127/8 that doesn't use lo0
-A INPUT ! -i lo -d 127.0.0.0/8 -j DROP

# Allow all outbound traffic
-A OUTPUT -j ACCEPT

# Allow HTTP traffic
-A INPUT -p tcp --dport 80 -j ACCEPT

# Allow HTTPS traffic
-A INPUT -p tcp --dport 443 -j ACCEPT

# Allow SSH traffic
-A INPUT -p tcp -m state --state NEW --dport 22 -j ACCEPT

# Allow ping
-A INPUT -p icmp -m icmp --icmp-type 8 -j ACCEPT

# Everything else is forbidden
-A INPUT -j DROP

COMMIT
